# FedGFT

./: README.md  requirements.txt  setup.cfg
src/: _plot_cfg.py  adult.py  celeba.py  compas.py  nn.py  optimizer.py  utils.py
