[metadata]
# replace with your username:
name = FedGFT
version = 0.0.1.dev1
author = Ganghua Wang
author_email = ganghua@uchicago.edu
description = This package implements bias mitigation federated learning algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
# project_urls =
#    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8